<resources>

    <string name="app_name">TrainCompany</string>
    <string name="label_email">Email</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_password">Password</string>
    <string name="button_login">Login</string>
    <string name="server_address">http://cmov-apiserver.herokuapp.com/api/</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="label_name">Name</string>
    <string name="label_address">Address</string>
    <string name="label_password_confirm">Password Confirmation</string>
    <string name="label_cctype">Credit Card Type</string>
    <string name="label_ccnumber">Credit Card Number</string>
    <string name="label_ccvalidity">Credit Card Validity</string>
    <string name="button_register">Register</string>
    <string name="message_connection_error">Connection Error</string>
    <string name="button_ok">OK</string>
    <string name="label_username">Username</string>
    <string name="label_team">Team</string>
    <string name="label_about">About</string>
    <string name="label_stations">Stations</string>
    <string name="label_profile">Profile</string>
    <string name="label_trips">Trips</string>
    <string name="label_reservation">Reservation</string>
    <string name="label_reservations">Reservations</string>
    <string name="label_reserve">Reserve</string>
    <string name="label_lines">Lines</string>
    <string name="button_logout">Logout</string>
    <string name="button_home">Home</string>
    <string name="button_nextreservation">New Reservation</string>
    <string name="label_line">Line</string>
    <string name="label_email_confirm">Email Confirmation</string>
    <string name="title_activity_make_reservation">MakeReservation</string>
    <string name="label_arrival_station">Arrival Station</string>
    <string name="label_departure_station">Departure Station</string>
    <string name="label_time">Time</string>
    <string name="label_date">Date</string>
    <string name="label_make_reservation">Make Reservation</string>
    <string name="title_activity_get_trips">GetTrips</string>
    <string name="title_activity_reservations">Reservations</string>
    <string name="label_new_reservation">New Reservation</string>
    <string name="title_activity_reservation_view">ReservationView</string>
    <string name="message_login_success">Login successful!</string>
    <string name="label_sync">Sync</string>
    <string name="message_registration_success">User registered successfully!</string>
    <string name="label_cancel_reservation">Cancel reservation</string>
    <string name="label_trip">Trip</string>
    <string name="label_validity">Validity</string>
    <string name="label_validate_trip">Validate reservations</string>
    <string name="button_validate">Validate Reservation</string>
    <string name="button_qr_code">Scan QRCode</string>
    <string name="button_gen_qr_code">Generate validation QRCode</string>
    <string name="label_price">Price</string>
    <string name="label_pay_reservation">Pay Reservation</string>
    <string name="label_status">Status</string>

</resources>